--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,16 +1,23 @@
 
 on: push
 
-job:
-  steps:
-    - run: |
-        mkdir artifact
-        mkdir artifact/aaa
+jobs:
+  myjob:
+    runs-on: 'windows-2019'
+    steps:
+      - run: |
+          mkdir artifact
+          mkdir artifact/aaa
 
-        mkdir bbb
-        touch bbb/ccc.txt
-        
-        ln -s "$(pwd)/bbb" artifact/bbb_symlink
+          mkdir bbb
+          touch bbb/ccc.txt
 
-        mkdir artifact/bbb_phys
-        ln "$(pwd)/bbb/ccc.txt" artifact/bbb_symlink/ccc_hardlink.txt
+          ln -s "$(pwd)/bbb" artifact/bbb_symlink
+
+          mkdir artifact/bbb_phys
+          ln "$(pwd)/bbb/ccc.txt" artifact/bbb_symlink/ccc_hardlink.txt
+      
+      - uses: actions/upload-artifact@v2
+        with:
+          name: myartifact
+          path: artifact/
